# rag-pdf

./: Dockerfile  Dockerfile_base  Makefile  README.md  build_base_image.sh  build_image.sh  pyproject.toml  test_queries.txt
chunking/: chunk.py
notebook/: generate_answers.ipynb  pipeline.ipynb
pipelines/: embed.pipeline.json  parse.pipeline.json  query.pipeline.json
rag/: _defaults.py  _utils.py  chunk.py  embed.py  gui.py  llm_rerank.py  parse.py  parsing.py  query.py  rag_schema.py  requirements.txt  rolling_window.py
rag/parsing/: parsing.py
