[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.0.0"
description = "RAG Prototype"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["rag"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.ruff.per-file-ignores]
# Ignore import violations in all `__init__.py` files
"__init__.py" = ["E402", "F401"]

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
ignore_missing_imports = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"
disallow_subclassing_any = "True"
no_implicit_optional = "True"
strict_equality = "True"
disallow_untyped_decorators = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"


